--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.5 <6",
-        "rafsalvioni/zeus-barcode": "1.0.*"
+        "rafsalvioni/zeus-barcode": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "5.3.0"
